--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "test-react-router-navbar-site-v6",
+  "name": "live-coding-node-scripts-basics-cli-master",
   "private": true,
+  "type": "module",
   "version": "0.0.0",
   "scripts": {
+    "start": "run-p backup dev",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "backup": "node scripts/bcli-backup.mjs"
   },
   "dependencies": {
     "react": "^18.0.0",
@@ -17,6 +20,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "npm-run-all": "^4.1.5",
     "vite": "^2.9.7"
   }
 }
